--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,13 @@
 			<version>2.2.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		</dependency>
+
+
+
 
 	</dependencies>
 
