--- a/src/main/resources/application.properties.template
+++ b/src/main/resources/application.properties.template
@@ -19,8 +19,8 @@ spring.security.oauth2.client.registration.google.client-id=SEU_GOOGLE_CLIENT_ID
 spring.security.oauth2.client.registration.google.client-secret=SEU_GOOGLE_CLIENT_SECRET
 spring.security.oauth2.client.registration.google.scope=email,profile
 
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
+spring.mail.host=SMT
+spring.mail.port=PORTA
 spring.mail.username=SEU_EMAIL
 spring.mail.password=SUA_SENHA_DE_APP
 spring.mail.properties.mail.smtp.auth=true
